<resources>
    <string name="app_name_test">Scanner (Test)</string>
    <string name="app_name_acc">Scanner (Acc)</string>
    <string name="app_name">Scanner</string>
    <string name="onboarding_title">Onboarding</string>
    <string name="onboarding_screen_1_title">Who should use this app?</string>
    <string name="onboarding_screen_1_description">This app can be used by international carriers. The app helps to check if a traveller is allowed to travel to the destination country according to the local COVID restrictions. The app uses the Digital COVID Certificate for this purpose.</string>
    <string name="onboarding_screen_2_title">Scan QR Code</string>
    <string name="onboarding_screen_2_description">Travellers show their QR code on their mobile phones or on paper. Point your camera at the code in order to scan the DCC.</string>
    <string name="onboarding_screen_3_title">Check result</string>
    <string name="onboarding_screen_3_description">The app shows either a valid sign (green screen) or invalid sign (red screen). In case of a red screen the traveller needs an alternative proof of a negative COVID test, vaccination or recovery.</string>
    <string name="onboarding_screen_4_title">Who is the scanner for?</string>
    <string name="onboarding_screen_4_description"><![CDATA[With this app, you can receive visitors again. But only if your location or activity falls under the designated locations.]]></string>
    <string name="onboarding_next">Next</string>
    <string name="privacy_policy_title">Terms of use</string>
    <string name="privacy_policy_description"><![CDATA[<a href="https://dcccrossborderscanner.nl/dist/termsofuse/termsofuse.html">The Terms of use</a> provide information about how the app works, as well as your rights.]]></string>
    <string name="privacy_policy_1"><![CDATA[Use of the information shown in the app can only be used <b>to perform the mandatory health checks for the journey it concerns.</b>]]></string>
    <string name="privacy_policy_2"><![CDATA[<b>No personal data is stored</b> either centrally or in the app.]]></string>
    <string name="privacy_policy_3"><![CDATA[<b>No personal data is stored</b> either centrally or in the app.]]></string>
    <string name="privacy_policy_checkbox_text">By checking the box I confirm that I have read the Terms of use and agree with the contents.</string>
    <string name="dialog_error_title">Technical error</string>
    <string name="dialog_error_message">Sorry, there was a technical error</string>
    <string name="ok">OK</string>
    <string name="scan_qr_title">Scan QR code</string>
    <string name="scan_qr_header">Start scanning</string>
    <string name="scan_qr_description"><![CDATA[<a href="#">How to scan ></a>]]></string>
    <string name="scan_qr_button">Start scanning</string>
    <string name="scan_result_demo_title">Demo QR code scanned</string>
    <string name="scan_result_valid_title">Valid QR code</string>
    <string name="scan_result_valid_last_name">Last name</string>
    <string name="scan_result_valid_first_name">First name</string>
    <string name="scan_result_valid_birth_day">Day of birth</string>
    <string name="scan_result_valid_birth_month">Birth month</string>
    <string name="scan_result_valid_personal_details_title">Check personal details</string>
    <string name="scan_result_european_nl_invalid_title">This is an international QR code</string>
    <string name="scan_result_european_nl_invalid_subtitle">This is not a valid certificate in the Netherlands. Ask the visitor to show a Dutch QR code.</string>
    <string name="scan_result_invalid_title">Invalid DCC QR code</string>
    <string name="scan_result_invalid_subtitle"><![CDATA[<a href=\"#\"><b>Read here what you can do.</a>]]></string>
    <string name="scan_result_invalid_button">Scan next</string>
    <string name="scan_result_invalid_reason_title">Invalid QR code</string>
    <string name="scan_result_invalid_reason_description"><![CDATA[This does <b>not</b> mean the visitor has coronavirus. Possible causes<br\><br\><ul><li>The visitor shows an international QR code</li><li>The QR code has been forwarded</li><li>The QR code has been forged</li><li>The time on the visitor\'s phone is incorrect</li></ul><br\><b>What to do now?</b><br\>Ask the visitor to get vaccinated or to take a test. After that, the visitor can use the CoronaCheck app to turn it into a QR code.]]></string>
    <string name="scan_result_valid_reason_title">About the check</string>
    <string name="scan_result_valid_reason_description"><![CDATA[Make sure the QR code belongs to the visitor by checking if the details on your screen correspond with their proof of identity.<br\><br\><b>Note: details may be incomplete</b><br/>In order to protect the visitor’s privacy, not all data is displayed. Some fields may contain a hyphen (-). It’s sufficient to check the details that are displayed.<br\><br\><b>If the details are incorrect, the visitor is not allowed access.</b>]]></string>
    <string name="about_this_app_description">The “DCC cross border Scanner NL” app is developed by the Ministry of Infrastructure and Water affairs in The Netherlands to simplify travelling through EU countries. Health information of travellers can be checked against travelling policies by international carriers quickly and efficiently. Safe travelling will be quicker and easier that way.</string>
    <string name="privacy_statement">Privacy statement</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="scanner_custom_title">Scan QR code</string>
    <string name="scanner_custom_message">Point the camera of your device at the QR code that is presented and wait for the app to process the code.</string>
    <string name="camera_rationale_dialog_title">Scanner wants to access your camera</string>
    <string name="camera_rationale_dialog_description">So the app can scan QR codes</string>
    <string name="app_setup_text">We\'re starting the app...</string>
    <string name="app_status_deactivated_title">App out of order</string>
    <string name="app_status_deactivated_message">The app is no longer in use. For more information, go to CoronaCheck.nl</string>
    <string name="app_status_deactivated_action">Read more</string>
    <string name="app_status_update_required_title">Time for an update</string>
    <string name="app_status_update_required_message">To continue, install the latest version of the app.</string>
    <string name="app_status_update_required_action">Install update</string>
    <string name="app_status_internet_required_title">You\'re not connected to the internet</string>
    <string name="app_status_internet_required_message">You need to be connected to start the app.</string>
    <string name="app_status_internet_required_action">Try again</string>
    <string name="personal_details_month_january">JAN</string>
    <string name="personal_details_month_february">FEB</string>
    <string name="personal_details_month_march">MAR</string>
    <string name="personal_details_month_april">APR</string>
    <string name="personal_details_month_may">MAY</string>
    <string name="personal_details_month_june">JUN</string>
    <string name="personal_details_month_july">JUL</string>
    <string name="personal_details_month_august">AUG</string>
    <string name="personal_details_month_sep">SEP</string>
    <string name="personal_details_month_okt">OCT</string>
    <string name="personal_details_month_nov">NOV</string>
    <string name="personal_details_month_dec">DEC</string>
    <string name="app_version">App version: %1$s (%2$s)</string>
    <string name="back">Back</string>
    <string name="onboarding_page_indicator_label">Page %1$s of %2$s</string>
    <string name="menu_close">Close</string>
    <string name="new_terms_title">We\'ve updated our policy</string>
    <string name="new_terms_highlights"><![CDATA[<b>Here\'s what changed</b><br\><ul><li>Description of acceptable use policy</li><li>App usage explanation</li><li>Camera usage permission</li></ul>]]></string>
    <string name="new_terms"><![CDATA[Read the full acceptable use policy <a href="https://coronacheck.nl/en/gebruikersvoorwaarden-in-app">here</a>.]]></string>
    <string name="new_terms_consent_button">Next</string>
    <string name="new_terms_consent_needed_positive_button">Agree</string>
    <string name="new_terms_consent_needed_negative_button">Don\'t agree</string>
    <string name="new_terms_no_consent_dialog_title">You can\'t proceed if you don\'t agree</string>
    <string name="new_terms_no_consent_dialog_message">You don\'t have access to the CoronaCheck Scanner app if you don\'t agree to the updated policy.</string>
    <string name="new_terms_no_consent_dialog_button">OK</string>
    <string name="accessibility_logo_label_ministry">Logo Central Government</string>
    <string name="url_faq">https://www.coronacheck.nl/en/faq-scanner-in-app</string>
    <string name="url_privacy_statement">https://www.government.nl/ministries/ministry-of-infrastructure-and-water-management/privacy</string>
    <string name="url_terms_of_use">https://dcccrossborderscanner.nl/dist/termsofuse/termsofuse.html</string>
    <string name="url_contact">https://www.government.nl/ministries/ministry-of-infrastructure-and-water-management/contact</string>
    <string name="about_this_app_read_more">Read more</string>
    <string name="about_this_app_accessibility">Accessibility</string>
    <string name="url_accessibility">https://dcccrossborderscanner.nl/dist/accessibility/accessibility.html</string>
    <string name="accessibility_flash_on">Turn the flashlight on.</string>
    <string name="accessibility_flash_off">Turn the flashlight off.</string>
    <string name="about_this_app">About the app</string>
    <string name="scan_instructions">How scanning works</string>
    <string name="scan_instructions_1_title">1. Keep your distance</string>
    <string name="scan_instructions_1_description">Ask the traveller to present a Digital COVID Certificate QR code on a mobile device or on paper. Keep your distance while pointing your camera in the app at the QR code and wait for the app to process the QR code. The app will proceed with checking the code automatically.</string>
    <string name="scan_instructions_2_title">2. Green screen</string>
    <string name="scan_instructions_2_description">A green screen indicates that the QR code is valid. Check if the personal information presented in your screen is similar to the information on the ID presented by the traveller.</string>
    <string name="scan_instructions_3_image">Person is holding a phone with a green screen and a black check mark.</string>
    <string name="scan_instructions_3_title">3. Check Corona status</string>
    <string name="scan_instructions_3_description">If necessary check if the data in the test, vaccination or recovery information that is shown by your app indicates that traveling to the destination country by this traveler is allowed. If so access can be granted to the traveller.</string>
    <string name="scan_instructions_4_image">Person is holding a phone with a red screen and a black cross.</string>
    <string name="certificates_outdated_button">Update lists</string>
    <string name="certificates_outdated_desc">You can continue to use the app. However, connect to the internet and try again using the “Update lists” button.</string>
    <string name="certificates_outdated_title">Trust list was not updated</string>
    <string name="departure">Leave from:</string>
    <string name="destination">Destination:</string>
    <string name="destination_country">Destination</string>
    <string name="pick_country">Choose country</string>
    <string name="color_code_title">Select the colour code of the country</string>
    <string name="color_code_description">Which countries have which colour code?</string>
    <string name="color_code_button_text">View</string>
</resources>